# ot-harjoitus

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSLsekvenssikaavio.md  monopoli.md  sekvenssikaavio.md
src/: main.py
src/database/: sqlite.py
src/services/: background_object.py  game_logic.py  game_state.py  goal.py  ground_object.py  initialization.py  level1.py  level2.py  level_select.py  menu.py  obstacle.py  platform.py  player.py
src/tests/: first_test.py  game_test.py
src/ui/: button.py  game_ui.py  screen.py  text.py
